// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentitySlide should render 1`] = `
<div>
  <section>
    <div
      class="avatar"
    >
      Identicon
    </div>
    <div
      class="nameLine"
    >
      <span
        class="name"
      >
        KILT Identity 1
      </span>
      <div
        class="wrapper"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Identity options"
          class="toggle"
          role="button"
          tabindex="0"
          title="Identity options"
          type="button"
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`IdentitySlide should render full DID avatar style 1`] = `
<div>
  <section>
    <div
      class="fullDid"
    >
      Identicon
    </div>
    <div
      class="nameLine"
    >
      <span
        class="name"
      >
        KILT Identity 2
      </span>
      <div
        class="wrapper"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Identity options"
          class="toggle"
          role="button"
          tabindex="0"
          title="Identity options"
          type="button"
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`IdentitySlideNew should render 1`] = `
<div>
  <section>
    <a
      aria-label="Add Identity"
      class="add"
      href="/identity/add"
      title="Add Identity"
    />
  </section>
</div>
`;
